# virtualagency

./: .gitignore  Cargo.toml  README.md  SCOPE_OF_WORK.md  fkdu-zphh-grxb-xhlt  package.json  pnpm-lock.yaml
.github/workflows/: windows-server-msi.yml
apps/desktop/: index.html  package.json
apps/desktop/dist-browser/: index.html
apps/desktop/dist-browser/assets/: event-CEEQP9SJ.js  event-CIw3-bTY.js  event-qXkG8y6s.js  index-6r9vsW9_.js  index-B2dRZKIB.js  index-BSYHU3vK.js  index-C1CKFY4u.css  index-DGLlgsgS.js  index-DQBanAnZ.js  index-kyP2ItVS.css  (+1 more)
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/agents/: manager.rs  mod.rs  output.rs  process.rs
apps/desktop/src-tauri/src/commands/: agent.rs  mod.rs  settings.rs  workspace.rs
apps/desktop/src-tauri/src/state/: app_state.rs
apps/desktop/src-tauri/src/utils/: cli.rs
apps/server/: Cargo.toml
apps/server/VirtualAgencyServer.app/Contents/: CodeResources  Info.plist
apps/server/VirtualAgencyServer.app/Contents/MacOS/: VirtualAgencyServer  server-binary
apps/server/VirtualAgencyServer.app/Contents/_CodeSignature/: CodeDirectory  CodeRequirements  CodeResources  CodeSignature
apps/server/scripts/: build-linux.sh
apps/server/src/: agents.rs  files.rs  main.rs  pty.rs
docs/: MCP_SERVERS_INTEGRATION.md
installer/windows/: Product.wxs
scripts/: build.sh  dev.sh
(+42 files in other folders)
